@@ -1,3 +1,13 @@
+Thu Feb  5 19:53:47 GMT  2015  Lee Noar  <leenoar@sky.com>
+
+	* include/sys/mman.h: Replace use of __caddr_t with void *.
+	A number of autobuilder projects require changes due to the
+	use of __caddr_t in relation to the mmap family of functions
+	(especially when they're written in C++). Some research shows
+	that in this context the use of __caddr_t is "old fashioned"
+	and that void * is now standard.
+	* sys/mman.c: Follow above change.
+
 Thu Feb  5 19:33:01 GMT  2015  Lee Noar  <leenoar@sky.com>
 
 	* gcccompat/atomics.c: Implement various atomic/sync functions.
